<resources>
    <string name="app_name">Swipe Demo</string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_submit">Save and Continue</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to profile description -->
    <string name="error_invalid_name">This name is too short</string>
    <string name="error_invalid_bdate">Invalid date. Enter as (Month)/(Day)/(Year)</string>
    <string name="description_title">Tell us about you!</string>
    <string name="name_description">Name *</string>
    <string name="birth_date_description">Birth Date * (##/##/####)</string>
    <string name="job_title_description">Job Title</string>
    <string name="favorite_food_description">Favorite Types of Food</string>
    <string name="description_description">Description</string>
    <string name="pronoun_description">Preferred Pronouns</string>
    <string name="gender_one">He/Him/His</string>
    <string name="gender_two">She/Her/Hers</string>
    <string name="gender_three">They/Them/Theirs</string>

    <!-- Strings related to search settings page-->
    <string name="match_me">Match Me!</string>
    <string name="search_title">Search Settings</string>
    <string name="distance_description">Max Distance</string>
    <string name="miles_description">15 Miles</string>
    <string name="food_choice_description">Food Types (Multiple Select)</string>
    <string name="food_choice_one">Italian</string>
    <string name="food_choice_two">American</string>
    <string name="food_choice_three">Mexican</string>
    <string name="food_choice_four">Chinese</string>
    <string name="food_choice_five">Thai</string>
    <string name="food_choice_six">Seafood</string>
    <string name="food_choice_seven">Breakfast</string>
    <string name="food_choice_eight">Vietnamese</string>
    <string name="food_choice_nine">Steakhouses</string>
    <string name="food_choice_ten">Vegetarian</string>
    <string name="food_choice_eleven">Japanese</string>
    <string name="food_choice_twelve">Korean</string>
    <string name="title_activity_display_test">DisplayTest</string>
</resources>
