<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/SearchSettingsActivity"
    android:background="#efefef"
>

    <Button
        android:id="@+id/top_button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#305191"
        android:layout_alignParentTop="true"
        android:clickable="false" />

    <TextView
        android:id="@+id/search_title"
        android:layout_width="600dp"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:layout_below="@id/top_button"
        android:text="@string/search_title"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="#ffffff"
        android:background="#305191"
        android:textSize="34sp"
        android:textStyle="bold"
        android:typeface="normal" />
    <Button
        android:layout_below="@id/search_title"
        android:id="@+id/search_line"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:text="@string/action_sign_in"
        android:background="#000000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/distance_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:layout_below="@id/search_line"
        android:layout_marginTop="10dp"
        android:text="@string/distance_description"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/darkBlue"
        android:textSize="28sp"
        android:textStyle="bold"
        android:typeface="normal" />
    <TextView
        android:id="@+id/miles_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:layout_toRightOf="@id/distance_description"
        android:layout_below="@id/search_line"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="10dp"
        android:text="@string/miles_description"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/darkBlue"
        android:textSize="28sp"
        android:textStyle="bold"
        android:typeface="normal" />
    <SeekBar
        android:id="@+id/distance_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/miles_description"
        android:minHeight="50dp"
        android:scaleX="1"
        android:scaleY="1.5"
        android:progressTint="@color/foinderOrange"
        android:thumbTint="@color/foinderOrange"/>

    <TextView
        android:paddingLeft="16dp"
        android:id="@+id/food_choice_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/distance_bar"
        android:layout_marginTop="15dp"
        android:text="@string/food_choice_description"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/darkBlue"
        android:textSize="28sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <CheckBox
        android:id="@+id/food_choice_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/food_choice_description"
        android:text="@string/food_choice_one"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:buttonTint="@color/foinderOrange"/>
    <CheckBox
        android:id="@+id/food_choice_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/food_choice_one"
        android:text="@string/food_choice_two"
        android:textSize="20sp"
        android:layout_alignStart="@id/food_choice_one"
        android:layout_alignLeft="@id/food_choice_one"
        android:layout_marginTop="10dp"
        android:buttonTint="@color/foinderOrange"/>
    <CheckBox
        android:id="@+id/food_choice_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/food_choice_two"
        android:text="@string/food_choice_three"
        android:textSize="20sp"
        android:layout_alignStart="@id/food_choice_one"
        android:layout_alignLeft="@id/food_choice_one"
        android:layout_marginTop="10dp"
        android:buttonTint="@color/foinderOrange"/>
    <CheckBox
        android:id="@+id/food_choice_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/food_choice_three"
        android:text="@string/food_choice_four"
        android:textSize="20sp"
        android:layout_alignStart="@id/food_choice_one"
        android:layout_alignLeft="@id/food_choice_one"
        android:layout_marginTop="10dp"
        android:buttonTint="@color/foinderOrange"/>
    <CheckBox
        android:id="@+id/food_choice_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/food_choice_four"
        android:text="@string/food_choice_five"
        android:textSize="20sp"
        android:layout_alignStart="@id/food_choice_one"
        android:layout_alignLeft="@id/food_choice_one"
        android:layout_marginTop="10dp"
        android:buttonTint="@color/foinderOrange"/>
    <CheckBox
        android:id="@+id/food_choice_six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/food_choice_five"
        android:text="@string/food_choice_six"
        android:textSize="20sp"
        android:layout_alignStart="@id/food_choice_one"
        android:layout_alignLeft="@id/food_choice_one"
        android:layout_marginTop="10dp"
        android:buttonTint="@color/foinderOrange"/>
    <CheckBox
        android:paddingRight="16dp"
        android:id="@+id/food_choice_seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/food_choice_description"
        android:text="@string/food_choice_seven"
        android:textSize="20sp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:buttonTint="@color/foinderOrange"/>
    <CheckBox
        android:id="@+id/food_choice_eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/food_choice_seven"
        android:text="@string/food_choice_eight"
        android:textSize="20sp"
        android:layout_alignStart="@id/food_choice_seven"
        android:layout_alignLeft="@id/food_choice_seven"
        android:layout_marginTop="10dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:buttonTint="@color/foinderOrange"/>
    <CheckBox
        android:id="@+id/food_choice_nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/food_choice_eight"
        android:text="@string/food_choice_nine"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_alignStart="@id/food_choice_seven"
        android:layout_alignLeft="@id/food_choice_seven"
        android:buttonTint="@color/foinderOrange"/>
    <CheckBox
        android:id="@+id/food_choice_ten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/food_choice_nine"
        android:text="@string/food_choice_ten"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_alignStart="@id/food_choice_seven"
        android:layout_alignLeft="@id/food_choice_seven"
        android:buttonTint="@color/foinderOrange"/>
    <CheckBox
        android:id="@+id/food_choice_eleven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/food_choice_ten"
        android:text="@string/food_choice_eleven"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_alignStart="@id/food_choice_seven"
        android:layout_alignLeft="@id/food_choice_seven"
        android:buttonTint="@color/foinderOrange"/>
    <CheckBox
        android:id="@+id/food_choice_twelve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/food_choice_eleven"
        android:text="@string/food_choice_twelve"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_alignStart="@id/food_choice_seven"
        android:layout_alignLeft="@id/food_choice_seven"
        android:buttonTint="@color/foinderOrange"/>

    <Button
        android:id="@+id/match_me_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_alignParentBottom="true"
        android:text="@string/match_me"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="#ffa366" />
</RelativeLayout>